[package]
name = "scrying"
version = "0.9.0-alpha.3"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A new tool for collecting RDP, web and VNC screenshots all in one place"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
askama = "0.11"
clap = { version = "3", features = ["cargo", "derive"] }
ctrlc = "3.1"
futures = "0.3"
image = "0.24"
lazy_static = "1.4"
log = "0.4.8"
nessus_xml_parser = "0.1"
nmap_xml_parser = "0.3"
#nmap_xml_parser = { "git" = "https://github.com/Ayrx/nmap_xml_parser" }
#rdp-rs = "0.1.0"
regex = "1.5"
simplelog = "0.12"
socks = "0.3"
thiserror = "1.0"
url = "2.1.1"
vnc = "0.4"

[dependencies.chromiumoxide]
version = "0.3"
default-features = false
features = ["tokio-runtime"]

[dependencies.rdp-rs]
git = "https://github.com/citronneur/rdp-rs"
rev = "7ac880d"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[target.'cfg(target_os = "linux")'.dependencies]
futures = "0.3"
gdk = "0.15"
gdk-pixbuf = "0.15"
gio = "0.15"
glib = "0.15"
gtk = "0.15"
webkit2gtk = { version = "0.17", features = ["v2_8"] }

[target.'cfg(target_os = "windows")'.dependencies]
crossbeam-channel = "0.5"
native-windows-gui = "1.0"
once_cell = "1.7"
webview2 = "0.1.0-beta.1"
winapi = { version = "0.3", features = ["libloaderapi"] }
winit = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.2", features = ["webview"] }

#[target.'cfg(target_os = "macos")'.dependencies.cacao]
#git = "https://github.com/ryanmcgrath/cacao"
#rev = "33123c6"
#features = ["webview"]

[dev-dependencies]
# used for testing the custom logging macros


[package.metadata.deb]
depends = "libwebkit2gtk-4.0-37"
extended-description = """\
A new tool for collecting RDP, web and VNC screenshots all in one place\
"""
section = "net"
priority = "optional"
assets = [
	["target/release/scrying", "usr/bin/", "755"]
]
