[package]
name = "scrying"
version = "0.9.2"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A new tool for collecting RDP, web and VNC screenshots all in one place"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
anyhow = "1"
askama = "0.11"
clap = { version = "3", features = ["cargo", "derive"] }
color-eyre = "0.6"
ctrlc = "3.1"
futures = "0.3"
image = "0.24"
lazy_static = "1.4"
log = "0.4.8"
nessus_xml_parser = "0.1"
nmap_xml_parser = "0.3"
#nmap_xml_parser = { "git" = "https://github.com/Ayrx/nmap_xml_parser" }
#rdp-rs = "0.1.0"
regex = "1.5"
simplelog = "0.12"
socks = "0.3"
url = "2.1.1"
vnc = "0.4"
vnc-rs = { version = "0.3", package = "vnc-rs" }

[dependencies.chromiumoxide]
version = "0.4"
default-features = false
features = ["tokio-runtime"]

[dependencies.rdp-rs]
git = "https://github.com/citronneur/rdp-rs"
rev = "7ac880d"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[package.metadata.deb]
depends = "chromium | chromium-browser | google-chrome"
extended-description = """\
A new tool for collecting RDP, web and VNC screenshots all in one place\
"""
section = "net"
priority = "optional"
assets = [
	["target/release/scrying", "usr/bin/", "755"]
]
